--- a/backend/package.json
+++ b/backend/package.json
@@ -13,5 +13,10 @@
     "license": "ISC",
     "dependencies": {
         "apollo-server": "^2.24.0"
+    },
+    "devDependencies": {
+        "eslint": "^7.25.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-plugin-import": "^2.22.1"
     }
 }
