--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@prisma/client": "^2.22.0",
         "apollo-server": "^2.24.0"
     },
     "devDependencies": {
         "eslint": "^7.25.0",
         "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-plugin-import": "^2.22.1"
+        "eslint-plugin-import": "^2.22.1",
+        "prisma": "^2.22.0"
     }
 }
