--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "license": "ISC",
     "dependencies": {
         "@prisma/client": "^2.22.0",
-        "apollo-server": "^2.24.0"
+        "apollo-server": "^2.24.0",
+        "bcryptjs": "^2.4.3",
+        "jsonwebtoken": "^8.5.1"
     },
     "devDependencies": {
         "eslint": "^7.25.0",
